# Sanskript

./: .commit_msg.txt  .gitignore  AGENTS_CONTEXT.txt  README.md  Task 5 — Compile  run CLI.txt  pyproject.toml  to_do.txt  to_do_original.txt
data/: README.md  ashtadhyayi_sutras.json  grammar_canon.json  lexicon_overrides.json  verb_frames.json  vocabulary_stems.json
docs/: PHASES-21-28-SEAL-CERTIFICATE.md  api-from-source.md  bytecode-v1.md  bytecode-v2.md  charter.md  contributing.md  control-flow.md  cookbook.md  core-syntax.md  engine-api-stability.md  feature-lattice.md  functional-declarative.md  functions-procedures.md  grammar-canon.md  grammar-register.generated.md  grammar-register.md  guide-cli-apps.md  guide-compiler-architecture.md  guide-data-research.md  guide-desktop-apps.md  guide-functional.md  guide-game-development.md  guide-grammar-primer.md  guide-machine-programming.md  guide-ml.md  guide-sskyp-reference.md  guide-stdlib-reference.md  guide-systems-programming.md  guide-vm-architecture.md  guide-web-apps.md  implementation-plan.md  language-design.md  language-paradigms.md  migration-from-python.md  migration-from-rust.md  modules-packages.md  native-sanskript-independence-checklist.md  object-oriented.md  phase10-standard-library-core.md  phase11-algorithms-data-structures.md  (+24 more)
examples/: aṣṭama-vidhānam.ssk  aṣṭama-vidhānam.sskbc  caturtha.ssk  chaturdasha-algorithm.ssk  chaturdasha-algorithm.sskbc  dashama-vakyam.sskbc  (+80 more)
ssk-vm/: Cargo.toml  README.md
ssk-vm/src/: bytecode.rs  lib.rs  main.rs  vm.rs
ssk-vm/tests/: conformance.rs
(+440 files in other folders)
