[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sanskript"
version = "0.1.0"
description = "A controlled Sanskrit programming language experiment."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
sanskript = "sanskript.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

